Developer/src/objects/aws_s3__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>access_key__c</fullName>
        <label>アクセスキーID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acl__c</fullName>
        <inlineHelpText>次のいずれかの文字列を入力してアクセス制御設定をおこないます。設定をおこなわなかった場合はprivateとなります。private | public-read | public-read-write | authenticated-read | bucket-owner-read | bucket-owner-full-control</inlineHelpText>
        <label>アクセス制御</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bucket__c</fullName>
        <label>バケット名</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiration__c</fullName>
        <inlineHelpText>S3のリソースにアクセスするために生成されるシグネチャーの有効期限（秒単位）。ブラウザーはシグネチャーを入手してからこの期限内にS3にアクセスする必要があります。シグネチャーはaws_s3.get_url_for_upload()メソッドが実行されたときに生成されます。設定しなかった場合は600秒にセットされます。</inlineHelpText>
        <label>シグネチャーの有効期限（秒）</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>folder__c</fullName>
        <inlineHelpText>オブジェクトを格納するバケット内のフォルダ。例：「/sales/a」　指定しなかった場合、オブジェクトはバケットの直下に保存されます。</inlineHelpText>
        <label>フォルダ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reduced_redundancy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>低冗長性のストレージタイプを利用する場合にチェックします。</inlineHelpText>
        <label>Reduced Redundancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>secret_access_key__c</fullName>
        <label>シークレットアクセスキー</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AWS S3</label>
</CustomObject>